--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,51 @@
-.item{
-    margin: 1%;
-    background-color: rgb(232, 250, 221);
-    width: 20%;
-    height: 220px;
-    text-align: center;
-    border: 1px solid black;
+nav {
+  background-color: #7a7777;
+  color: white;
+  padding: 10px;
+  text-align: center;
 }
-.itemInCart{
-    display: flex;
-    padding-top: 4%;
-    margin-left: 50px;
-    font-size: 10px;
-    margin: 1%;
-    background-color: rgb(255, 220, 96);
-    height: 150px;
-    text-align: center;
-    border: 1px solid black; 
+.layout {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.item {
+  margin: 1%;
+  background-color: rgb(232, 250, 221);
+  height: 187px;
+  width: 20%;
+  text-align: center;
+  border: 1px solid black;
+  cursor: pointer;
+}
+.item:hover {
+  scale: 1.02;
+  background-color: rgb(177, 214, 152);
 }
 
-.itemList{
-    margin-top: 3%;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: center;
+.itemButton {
+  background-color: rgb(255, 220, 96);
 }
-.Cart{
+.itemInCart {
+  display: flex;
+  padding-top: 4%;
+  margin-left: 50px;
+  font-size: 10px;
+  margin: 1%;
+  background-color: rgb(255, 220, 96);
+  height: 150px;
+  text-align: center;
+  border: 1px solid black;
+}
+
+.itemList {
+  margin-top: 3%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+}
+.Cart {
     /* margin-left: 3%;
     margin-top: 3%;
     width:20%;
@@ -36,54 +56,82 @@
     
     overflow: auto; */
 }
-.itemBattens{
+.itemBattens {
     width: 35%;
-    
 }
-.amountInCart{
+.amountInCart {
     width: 30%;
     margin-top: 10%;
     font-size: xx-large;
 }
-.itemText{
+.itemText {
     width: 50%;
     font-size: xx-large;
 }
-.layout{
-    display: flex;
-    justify-content: center;
-   flex-wrap: wrap;
-}
-.CartList{
+
+.CartList {
     justify-content: center;
     margin-top: 5%;
-}
-.total{
+    overflow-y: auto;
+    height: 600px
 
-    /* position: fixed; */
-   width: 100%;
-    height: 100px;
-    background-color: rgba(53, 128, 6, 0.587);
-   margin-top: 160%;
+}
+.total {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  background-color: rgba(53, 128, 6, 1);
   bottom: 0;
-    transform: translate(-50);
-  
 }
-.deleteAll{
-    width: 100%;
-    height: 35px;
+.deleteAll {
+  width: 100%;
+  height: 35px;
+}
+.continer {
+  position:relative;
+  margin-left: 3%;
+  margin-top: 3%;
+  width: 20%;
+  height: 800px;
+  border: 1px solid black;
+  text-align: center;
  
-    
 }
-.continer{
-   
-    margin-left: 3%;
-    margin-top: 3%;
-    width:20%;
-    height: 800px;
-    border: 1px solid  black;
-  
-    text-align: center;
-    overflow: auto;
-    
+.categories {
+  margin: 1%;
+  background-color: rgb(232, 250, 221);
+  text-align: center;
+  border: 1px solid black;
+}
+.categories,
+img {
+  width: 360px;
+  height: 320px;
+}
+.img_ULj {
+  width: 100px;
+  height: 100px;
+}
+.allCategories {
+  margin-top: 3%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.continer1.animate {
+  animation: slideIn 0.5s ease-out;
+}
+.continer1 {
+  width: 100%;
 }
